Fixed inconsistent project card sizing on mobile

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -3,10 +3,6 @@
     overflow-x: hidden;
   }
 
-  .flex-container {
-    justify-content: start;
-  }
-
   .landing-section {
     flex-direction: column;
     justify-content: stretch;
@@ -82,9 +78,13 @@
     padding: 5rem 1rem;
   }
 
+  .projects-container {
+    justify-content: stretch;
+  }
+
   .project-card {
     width: auto;
-    height: 14rem;
+    height: 16rem;
 
     gap: 0.5rem;
 
@@ -95,20 +95,23 @@
   }
 
   .project-card-black-area {
-    height: auto;
+    height: 10rem;
     width: 100%;
 
     padding: 0rem 0.5rem;
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
   }
 
   .project-card-top-line {
     display: flex;
     flex-direction: column;
     justify-content: start;
+    align-items: start;
   }
 
   .project-card-chip-list {
-    padding-left: 0.5rem;
+    padding-left: 0rem;
     display: flex;
     flex-direction: row;
     justify-content: start;
